# quasar-spotify-api

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml  quasar-spotify-api.cpp  quasar-spotify-api.sln  quasar-spotify-api.vcxproj  quasar-spotify-api.vcxproj.filters  spotify_quasar.cpp  spotify_quasar.h  spotify_quasar.sln  spotify_quasar.vcxproj  spotify_quasar.vcxproj.filters  spotify_quasar_global.h  spotifyapi.cpp  spotifyapi.h  spotifyquasar.cpp  spotifyquasar.h
api/: plugin-api.exp  plugin-api.lib
widget/: index.html  spotify.json
widget/css/: style.css
widget/js/: index.js
widgets/spotify-now-playing/: index.html  spotify-now-playing.json
widgets/spotify-now-playing/css/: style.css
widgets/spotify-now-playing/js/: script.js
